--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "echo \"Banana \"",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "husky": "^7.0.4",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.19"
   }
